--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
-    background-image: url('baldi.jpeg');
+    cursor: url('assets/cursor.png'), auto;
+}
+
+/* bg */
+body {
+    background-image: url('assets/baldi.jpeg');
     background-size: 75px 75px;
     animation: scrollBackground 5s linear infinite;
 }
@@ -21,6 +26,34 @@ body {
     text-shadow: -3px -3px 0 #000, 3px -3px 0 #000, -3px 3px 0 #000, 3px 3px 0 #000;
 }
 
+#header {
+    background-color: rgb(35, 40, 50);
+    border-radius: 15px;
+    margin-left: 75px;
+    margin-right: 75px;
+    margin-top: 40px;
+    padding: 0.5px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+#scroller {
+    background-color: rgb(20, 23, 27);
+    border-radius: 15px;
+    font-size: 1.2em;
+    overflow: hidden;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#spinningbaldo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
 /* h1 */
 h1 {
     text-align: center;
@@ -34,11 +67,16 @@ h1 {
         transform: translateY(0);
     }
     50% {
-        transform: translateY(20px);
+        transform: translateY(10px);
     }
     100% {
         transform: translateY(0);
     }
+}
+
+/* p */
+p {
+    font-size: 1.5em;
 }
 
 /* button */
@@ -47,11 +85,26 @@ button {
     transition: .3s ease all;
     font: 2.2em Comic Sans MS;
     border: 2px solid black;
+    cursor: url('assets/cursor.png'), auto;
+    border-radius: 15px;
+    margin-bottom: 20px;
 }
 
-/* button anim */
+/* button hover */
 button:hover {
-    background-color: skyblue; 
+    background-color: skyblue;
     transition: .3s ease all;
     transform: translateY(-5px);
+}
+
+/* button active */
+button:active {
+    background-color: rgb(0, 132, 255);
+    transition: .0s ease all;
+}
+
+/* centering button */
+.button-container {
+    display: flex;
+    justify-content: center;
 }
